--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 dependencies:
   dart_frog: ^0.3.0
+  firebase_dart: ^1.0.11
+  uuid: ^3.0.7
 
 dev_dependencies:
   mocktail: ^0.3.0
